--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -19,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.1.2",
-    "@types/googlemaps": "^3.43.3",
+    "@types/googlemaps": "^3.39.13",
     "bootstrap": "^4.6.2",
     "intercom-client": "^4.0.0",
     "jquery": "^3.6.3",
