--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "maplibre-gl": "^2.4.0",
     "ng-scrollbar": "^0.0.8",
     "ngx-google-places-autocomplete": "^2.0.5",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
